2023-11-21  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Support for LibreSSL and IP addresses

2023-11-27  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (parse_command_line_options): allow uppercase protocols

2023-11-23  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Added support for MQTTS

2023-11-21  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (hours_until): do not complain if LONG_BIT is not available (OpenBSD)

2023-10-30  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (info): --info output at the endw

2023-10-21  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Added a check if --file is a directory

2023-09-27  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (exec_with_timeout): Global elapsed time considered for the timeout

2023-09-13  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed an issue in the /etc/hosts parsing

2023-08-21  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Fix for OpenSSL 1 and proxy

2023-08-16  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (check_ocsp): Fixed the proxy settings by OCSP
        * check_ssl_cert (fetch_certificate): Harmonize error messages from tinyproxy
        * check_ssl_cert (check_attr): Critical if a ciphers check is required and a proxy is used

2023-08-10  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed a bug in the proxy command line options validation

2023-07-28  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (main): Fixed a bug if the host cannot be resolved and --resolve is specified

2023-07-19  Matteo Corti  <matteo@corti.li>

        * check_ssl_cert (prepend_critical_message): Display the port number in the CRITICAL output (as for OK)
        * check_ssl_cert (append_warning_message): Display the port number in the WARNING output (as for OK)

2023-06-13  Matteo Corti  <matteo@corti.li>
