@@ -463,10 +463,10 @@ usage() {
     echo "                                   integers, 2 otherwise"
     echo "   -P,--protocol protocol          Use the specific protocol:"
     echo "                                   dns, ftp, ftps, http, https (default),"
-    echo "                                   h2 (HTTP/2), imap, imaps, irc, ircs, ldap,"
-    echo "                                   ldaps, mqtts, mysql, pop3, pop3s,"
-    echo "                                   postgres, sieve, smtp, smtps, tds, xmpp,"
-    echo "                                   xmpp-server."
+    echo "                                   h2 (HTTP/2), h3 (HTTP/3), imap, imaps,"
+    echo "                                   irc, ircs, ldap, ldaps, mqtts, mysql,"
+    echo "                                   pop3, pop3s, postgres, sieve, smtp, smtps,"
+    echo "                                   tds, xmpp, xmpp-server."
     echo "                                   ftp, imap, irc, ldap, pop3, postgres,"
     echo "                                   sieve, smtp: switch to TLS using StartTLS"
     echo "      --password source            Password source for a local certificate,"
@@ -477,6 +477,7 @@ usage() {
     echo "                                   option"
     echo "      --python-bin path            Path of the python binary to be used"
     # Delimiter at 78 chars ############################################################
+    echo "      --quic                       Use QUIC"
     echo "   -q,--quiet                      Do not produce any output"
     # Delimiter at 78 chars ############################################################
     echo "   -r,--rootcert path              Root certificate or directory to be used"
@@ -2590,7 +2591,11 @@ fetch_certificate() {
     fi
 
     # Check if a protocol was specified (if not HTTP switch to TLS)
-    if [ -n "${PROTOCOL}" ] && [ "${PROTOCOL}" != 'http' ] && [ "${PROTOCOL}" != 'https' ] && [ "${PROTOCOL}" != 'h2' ]; then
+    if [ -n "${PROTOCOL}" ] &&
+           [ "${PROTOCOL}" != 'http' ] &&
+           [ "${PROTOCOL}" != 'https' ] &&
+           [ "${PROTOCOL}" != 'h2' ] &&
+           [ "${PROTOCOL}" != 'h3' ]; then
 
         case "${PROTOCOL}" in
         pop3 | ftp)
@@ -2787,9 +2792,11 @@ fetch_certificate() {
 
         if [ "${PROTOCOL}" = 'h2' ]; then
             ALPN="-alpn h2"
+        elif [ "${PROTOCOL}" = 'h3' ]; then
+            ALPN="-alpn h3"
         fi
 
-        exec_with_timeout "printf '${HTTP_REQUEST}' | ${OPENSSL} s_client ${SECURITY_LEVEL} ${INETPROTO} ${CLIENT} ${CLIENTPASS} -crlf ${ALPN} -connect ${HOST_ADDR}:${PORT} ${SERVERNAME} ${SCLIENT_PROXY} ${SCLIENT_PROXY_ARGUMENT} -showcerts -verify 6 ${ROOT_CA} ${SSL_VERSION} ${SSL_VERSION_DISABLED} ${SSL_AU} ${STATUS} ${DANE} ${RENEGOTIATION} 2> ${ERROR} 1> ${CERT}"
+        exec_with_timeout "printf '${HTTP_REQUEST}' | ${OPENSSL} s_client ${QUIC} ${SECURITY_LEVEL} ${INETPROTO} ${CLIENT} ${CLIENTPASS} -crlf ${ALPN} -connect ${HOST_ADDR}:${PORT} ${SERVERNAME} ${SCLIENT_PROXY} ${SCLIENT_PROXY_ARGUMENT} -showcerts -verify 6 ${ROOT_CA} ${SSL_VERSION} ${SSL_VERSION_DISABLED} ${SSL_AU} ${STATUS} ${DANE} ${RENEGOTIATION} 2> ${ERROR} 1> ${CERT}"
         RET=$?
 
     fi
@@ -2876,6 +2883,10 @@ fetch_certificate() {
             if [ -z "${SELFSIGNED}" ]; then
                 prepend_critical_message 'Self signed certificate'
             fi
+
+        elif ascii_grep 'quic_do_handshake' "${ERROR}"; then
+
+            prepend_critical_message 'QUIC not supported'
 
         elif ascii_grep 'dh[ ]key[ ]too[ ]small' "${ERROR}"; then
 
@@ -3007,6 +3018,10 @@ fetch_certificate() {
         if [ "${PROTOCOL}" = 'h2' ]; then
             if ! "${GREP_BIN}" -q -F 'ALPN protocol: h2' "${CERT}"; then
                 prepend_critical_message 'The server does not support HTTP/2'
+            fi
+        elif [ "${PROTOCOL}" = 'h3' ]; then
+            if ! "${GREP_BIN}" -q -F 'ALPN protocol: h3' "${CERT}"; then
+                prepend_critical_message 'The server does not support HTTP/3'
             fi
         fi
 
@@ -3323,6 +3338,10 @@ parse_command_line_options() {
             ;;
         --prometheus)
             PROMETHEUS=1
+            shift
+            ;;
+        --quic)
+            QUIC='-quic'
             shift
             ;;
         -q | --quiet)
@@ -4221,7 +4240,7 @@ main() {
             http)
                 PORT=80
                 ;;
-            https | h2)
+            https | h2 | h3)
                 PORT=443
                 ;;
             mqtts)
@@ -4377,6 +4396,20 @@ main() {
     fi
     check_required_prog "${OPENSSL}"
     OPENSSL=${PROG}
+
+    if [ -n "${QUIC}" ] ; then
+
+        require_s_client_option '-quic'
+
+        # QUIC requires HTTP/2
+        if [ -n "${PROTOCOL}" ] && [ "${PROTOCOL}" != 'h3' ]; then
+            critical 'QUIC only works with HTTP/2'
+        else
+            verboselog '--quic specified enabling HTTP/3'
+            PROTOCOL='h3'
+        fi
+
+    fi
 
     ##############################################################################
     # custom grep
