@@ -330,7 +330,7 @@ TCP port (default 443)
 Number of decimal places for durations: defaults to 0 if critical or warning are integers, 2 otherwise
 .TP
 .BR "-P,--protocol" " protocol"
-Use the specific protocol: dns, ftp, ftps, http, https (default), h2 (HTTP/2), imap, imaps, irc, ircs, ldap, ldaps, mqtts, mysql, pop3, pop3s, postgres, sieve, smtp, smtps, tds, xmpp, xmpp-server, ftp, imap, irc, ldap, pop3, postgres, sieve, smtp: switch to TLS using StartTLS.
+Use the specific protocol: dns, ftp, ftps, http, https (default), h2 (HTTP/2), h3 (HTTP/3), imap, imaps, irc, ircs, ldap, ldaps, mqtts, mysql, pop3, pop3s, postgres, sieve, smtp, smtps, tds, xmpp, xmpp-server, ftp, imap, irc, ldap, pop3, postgres, sieve, smtp: switch to TLS using StartTLS.
 .BR
 These protocols switch to TLS using StartTLS: ftp, imap, irc, ldap, mysql, pop3, smtp.
 .TP
@@ -348,6 +348,9 @@ Set http_proxy and the s_client -proxy option
 .TP
 .BR "   --python-bin" " path"
 Path of the python binary to be used
+.TP
+.BR "   --quic"
+Use QUIC
 .TP
 .BR "-q,--quiet"
 Do not produce any output
