@@ -504,7 +504,12 @@ object CheckCommand "ssl_cert_extended" {
 			description = "Path of the python binary to be used"
 		}
 
-		"--quiet" = {
+		"--quic" = {
+			set_if = "$ssl_cert_extended_quic$"
+			description = "Use QUIC"
+		}
+
+        "--quiet" = {
 			set_if = "$ssl_cert_extended_quiet$"
 			description = "Do not produce any output"
 		}
