@@ -1,3 +1,7 @@
+2023-11-30  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert: Added QUIC support
+
 2023-11-21  Matteo Corti  <matteo@corti.li>
 
         * check_ssl_cert (main): Support for LibreSSL and IP addresses
